--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <link rel="shortcut icon" type="image/png" href="images/icon/favicon.logo.png">
+    <link rel="shortcut icon" type="image/png" href="images/icon/favicon.log.png">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>NayiManzil</title>
