--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				</h1>
 				<p>Welcome to <strong>Nayi Manzil</strong>, your gateway to a thriving career in web development.</p>
 				<div class="play">
-					<span><a href="#contactus_section" target="_blank" class="anch">Join Now</a></span>
+					<span><a href="#contactus_section" target="_blank" class="anch">Join Alpha</a></span>
 				</div>
 				</div>
 				
@@ -168,22 +168,22 @@
 		<center><p style="font-size: 50px; padding-top: 100px; padding-bottom: 60px;">We're the Creators</p></center>
 		<div class="totalcard">
 			<div class="card">
-				<center><img src="images/creator/A.jpeg" alt="iamge"></center>
-				<center><div class="card-title">Muhammad Ali Raza</div>
+				<center><img src="images/creator/s.png" alt="iamge"></center>
+				<center><div class="card-title">Muhammad Faizan Akram</div>
 				<div id="detail">
 					<p>“ You can teach a student a lesson for a day; but if you can teach him to learn by creating curiosity, he will continue the learning process as long as he lives “</p>
 					<div class="duty"></div>
-					<a href="https://www.linkedin.com/in/muhammad-ali-raza-b8766532b/" target="_blank" rel="noopener"><button class="btn-roshan">Follow +</button></a>
+					<a href="https://www.linkedin.com/in/m-faizan-akram-02196231a/" target="_blank" rel="noopener"><button class="btn-roshan">Follow +</button></a>
 				</div>
 				</center>
 			</div>
 			<div class="card">
-				<center><img src="images/creator/S.png" alt="iamge"></center>
-				<center><div class="card-title">Muhammad Faizan Akram</div>
+				<center><img src="images/creator/A.jpeg" alt="iamge"></center>
+				<center><div class="card-title">Muhammad Ali Raza</div>
 				<div id="detail">
 					<p>“ Real education should consist of drawing the goodness and the best out of our own students. What better books can there be than the book of humanity “</p>
 					<div class="duty"></div>
-					<a href="https://www.linkedin.com/in/m-faizan-akram-02196231a/" target="_blank" rel="noopener"><button class="btn-akhil">Follow +</button></a>
+					<a href="https://www.linkedin.com/in/muhammad-ali-raza-b8766532b/" target="_blank" rel="noopener"><button class="btn-akhil">Follow +</button></a>
 				</div>
 				</center>
 			</div>
