--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 		<center><p style="font-size: 50px; padding-top: 100px; padding-bottom: 60px;">We're the Creators</p></center>
 		<div class="totalcard">
 			<div class="card">
-				<center><img src="images/creator/s.png" alt="iamge"></center>
+				<center><img src="images/creator/S.png" alt="iamge"></center>
 				<center><div class="card-title">Muhammad Faizan Akram</div>
 				<div id="detail">
 					<p>“ You can teach a student a lesson for a day; but if you can teach him to learn by creating curiosity, he will continue the learning process as long as he lives “</p>
