--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				<h1>
 				Learn <br> & become <br> the Top 1st <br>
 				<span class="rotating-text">Frontend</span>
-				<span class="text-teal">developer</span>
+				<span class="text-teal">Developer</span>
 				</h1>
 				<p>Welcome to <strong>Nayi Manzil</strong>, your gateway to a thriving career in web development.</p>
 				<div class="play">
@@ -164,49 +164,49 @@
     </div>
 
   <!-- TEAM -->
-	<div class="diffSection" id="team_section">
-		<center><p style="font-size: 50px; padding-top: 100px; padding-bottom: 60px;">We're the Creators</p></center>
-		<div class="totalcard">
-			<div class="card">
-				<center><img src="images/creator/S.png" alt="iamge"></center>
-				<center><div class="card-title">Muhammad Faizan Akram</div>
-				<div id="detail">
-					<p>“ You can teach a student a lesson for a day; but if you can teach him to learn by creating curiosity, he will continue the learning process as long as he lives “</p>
-					<div class="duty"></div>
-					<a href="https://www.linkedin.com/in/m-faizan-akram-02196231a/" target="_blank" rel="noopener"><button class="btn-roshan">Follow +</button></a>
-				</div>
-				</center>
+  <div class="diffSection" id="team_section">
+	<center><p style="font-size: 50px; padding-top: 100px; padding-bottom: 60px;">We're the Creators</p></center>
+	<div class="totalcard">
+		<div class="card">
+			<center><img src="images/creator/S.png" alt="iamge"></center>
+			<center><div class="card-title">Muhammad Faizan Akram</div>
+			<div id="detail">
+				<p>“ You can teach a student a lesson for a day; but if you can teach him to learn by creating curiosity, he will continue the learning process as long as he lives “</p>
+				<div class="duty"></div>
+				<a href="https://www.linkedin.com/in/m-faizan-akram-02196231a/" target="_blank" rel="noopener"><button class="btn-roshan">Follow +</button></a>
 			</div>
-			<div class="card">
-				<center><img src="images/creator/A.jpeg" alt="iamge"></center>
-				<center><div class="card-title">Muhammad Ali Raza</div>
-				<div id="detail">
-					<p>“ Real education should consist of drawing the goodness and the best out of our own students. What better books can there be than the book of humanity “</p>
-					<div class="duty"></div>
-					<a href="https://www.linkedin.com/in/muhammad-ali-raza-b8766532b/" target="_blank" rel="noopener"><button class="btn-akhil">Follow +</button></a>
-				</div>
-				</center>
+			</center>
+		</div>
+		<div class="card">
+			<center><img src="images/creator/A.jpeg" alt="iamge"></center>
+			<center><div class="card-title">Muhammad Ali Raza</div>
+			<div id="detail">
+				<p>“ Real education should consist of drawing the goodness and the best out of our own students. What better books can there be than the book of humanity “</p>
+				<div class="duty"></div>
+				<a href="https://www.linkedin.com/in/muhammad-ali-raza-b8766532b/" target="_blank" rel="noopener"><button class="btn-akhil">Follow +</button></a>
 			</div>
+			</center>
 		</div>
 	</div>
+</div>
+
+<!--SERVICES -->
+<div class="service-swipe">
+	<div class="diffSection" id="services_section">
+	<center><p style="font-size: 50px; padding: 100px; padding-bottom: 40px; color: #fff;">Services</p></center>
+	</div>
+	<a href="https://ums-murshad.vercel.app/"><div class="s-card"><img src="images/icon/discussion.png" alt="iamge"><p><b><i>UMS</i></b></p></div></a>
+	<a href="subjects/computer_courses.html"><div class="s-card"><img src="images/icon/computer-courses.png" alt="iamge"><p>Frontend</p></div></a>
+	<a href="subjects/jee.html"><div class="s-card"><img src="images/icon/brainbooster.png" alt="iamge"><p>Backend </p></div></a>
+	<a href="#"><div class="s-card"><img src="images/icon/online-tutorials.png" alt="iamge"><p>Data basses</p></div></a>
+	<a href="."><div class="s-card"><img src="images/icon/papers.jpg" alt="iamge"><p>Next.js</p></div></a>
+
+	<a href="/subjects/quiz.html"><div class="s-card"><img src="images/icon/q1.png" alt="iamge"><p>Daily Brain Teasing Questions to Improve IQ</p></div></a>
+
+</div>
 
 
-<!-- SERVICES -->
-	<!-- <div class="service-swipe">
-		<div class="diffSection" id="services_section">
-		<center><p style="font-size: 50px; padding: 100px; padding-bottom: 40px; color: #fff;">Services</p></center>
-		</div>
-		<a href="subjects/computer_courses.html"><div class="s-card"><img src="images/icon/computer-courses.png" alt="iamge"><p>Free Online Computer Courses</p></div></a>
-		<a href="subjects/jee.html"><div class="s-card"><img src="images/icon/brainbooster.png" alt="iamge"><p>Building Concepts for Competitive Exams</p></div></a>
-		<a href="#"><div class="s-card"><img src="images/icon/online-tutorials.png" alt="iamge"><p>Online Video Lectures</p></div></a>
-		<a href="subjects/jee.html#sample_papers"><div class="s-card"><img src="images/icon/papers.jpg" alt="iamge"><p>Sample Papers of Various Competitive Exams</p></div></a>
-		<a href="#"><div class="s-card"><img src="images/icon/p3.png" alt="iamge"><p>Performance and Ranking Report</p></div></a>
-		<a href="#contactus_section"><div class="s-card"><img src="images/icon/discussion.png" alt="iamge"><p>Discussion with Our Tutors & Mentors</p></div></a>
-		<a href="subjects/quiz.html"><div class="s-card"><img src="images/icon/q1.png" alt="iamge"><p>Daily Brain Teasing Questions to Improve IQ</p></div></a>
-		<a href="#contactus_section"><div class="s-card"><img src="images/icon/help.png" alt="iamge"><p>24x7 Online Support</p></div></a>
-	</div> -->
-
-<!-- Reviews by Students -->
+<!-- review students -->
 <div id="makeitfull">
 	<a href="#review_section"><img src="images/icon/makeitfull.png" alt="iamge"></a>
 </div>
@@ -276,7 +276,7 @@
 		<div class="csec"></div>
 		<div class="back-contact">
 			<div class="cc">
-			<form action="mailto:mfaizanakram536@gmail.com" method="post" enctype="text/plain">
+			<form action="maliraza.346346@gmail.com" method="post" enctype="text/plain">
 				<label>First Name <span class="imp">*</span></label><label style="margin-left: 185px">Last Name <span class="imp">*</span></label><br>
 				<center>
 				<input type="text" name="" style="margin-right: 10px; width: 175px" required="required" placeholder="first name"><input type="text" name="lname" style="width: 175px" required="required" placeholder="Last Name"><br>
@@ -286,7 +286,7 @@
 				<label>Message <span class="imp">*</span></label><br>
 				<input type="text" name="message" style="width: 100%" required="required" placeholder="Message "><br>
 				<label>Additional Details</label><br>
-				<textarea name="addtional"></textarea><br>
+				<textarea name="addtional" placeholder="Enter............."></textarea><br>
 				<button type="submit" id="csubmit">Send Message</button>
 			</form>
 			</div>
@@ -304,13 +304,13 @@
 
 	<div class="feedbox">
 		<div class="feed">
-			<form action="mailto:roshank9419@gmail.com" method="post" enctype="text/plain">
+			<form action="mailto:maliraza.346346@gmail.com" method="post" enctype="text/plain">
 				<label>Your Name</label><br>
 				<input type="text" name="" class="fname" required="required" placeholder="Your Name"><br>
 				<label>Email</label><br>
 				<input type="email" name="mail" required="required" placeholder="Email"><br>
 				<label>Additional Details</label><br>
-				<textarea name="addtional"></textarea><br>
+				<textarea name="addtional" placeholder="Enter........"></textarea><br>
 				<button type="submit" id="csubmit">Send Message</button>
 			</form>
 		</div>
@@ -340,10 +340,12 @@
 			<div class="right-col">
 				<h1 style="color: #fff">Our Newsletter</h1>
 				<div class="border"></div><br>
+				<form action="mailto:maliraza.346346@gmail.com" method="post" enctype="text/plain"></form>
 				<p>Enter Your Email to get our News and updates.</p>
 				<form class="newsletter-form">
 					<input class="txtb" type="email" placeholder="Enter Your Email">
 					<input class="btn" type="submit" value="Submit">
+				</form>
 				</form>
 			</div>
 		</div>
