--- a/subjects/quiz.html
+++ b/subjects/quiz.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<link rel="shortcut icon" type="png" href="../images/icon/favicon.png">
 	<title>Quiz on LearnEd</title>
 	<link rel="stylesheet" type="text/css" href="quizStyle.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta charset="UTF-8">
 	<script type="text/javascript" src="../script.js"></script>
 </head>
 <body>
@@ -12,26 +14,26 @@
 	<header>
 		<div class="nav" id="nav">
 			<div id="learned-logo">
-			<a href="../index.html"><img src="../images/icon/logo.png" style="width: 120px;"></a></div>
-			<div class="switch-tab" id="switch-tab" onclick="switchTAB()"><img src="../images/icon/menu.png"></div>
-			<ul id="list-switch">
-				<li><a href="jee.html"><img src="../images/courses/d1.png" class="icon">JEE</a></li>
-				<li><a href="gate.html"><img src="../images/courses/paper.png" class="icon">GATE</a></li>
-				<li><a href="computer_courses.html"><img src="../images/courses/computer.png" class="icon">Computer Courses</a></li>
-				<li><a href="computer_courses.html#data"><img src="../images/courses/data.png" class="icon">Data Structures</a></li>
-				<li><a href="computer_courses.html#algo"><img src="../images/courses/algo.png" class="icon">Algorithm</a></li>
-				<li><a href="computer_courses.html#projects"><img src="../images/courses/projects.png" class="icon">Projects</a></li>
+			<a href="../index.html"><img src="../images/icon/logo.png"  alt="2" style="width: 120px;"></a></div>
+			<div class="switch-tab" id="switch-tab" onclick="switchTAB()"><img src="../images/icon/menu.png" alt="2"></div>
+			 <ul id="list-switch">
+				<li><a href="/index.html"><img src="../images/courses/d1.png" alt="2" class="icon">HOME</a></li>
+				<li><a href="/"><img src="../images/courses/paper.png" alt="2" class="icon" alt="2">FRONTEND</a></li>
+				<li><a href="/"><img src="../images/courses/computer.png" class="icon" alt="2">JAVASCRIPT</a></li>
+				<li><a href="/"><img src="../images/courses/data.png" class="icon" alt="2">BACKEND</a></li>
+				<li><a href="/"><img src="../images/courses/algo.png" class="icon" alt="2">DATA BASIS</a></li>
+				<li><a href="/login.html"><img src="../images/courses/projects.png" class="icon" alt="2">LOG IN</a></li>
 			</ul>
 			<div class="search" id="search-switch">
-				<input type="search" placeholder="Search" class="srch"><button id="srchbtn"><img src="../images/icon/search.png"></button>
+				<input type="search" placeholder="Search" class="srch"><button id="srchbtn"><img src="../images/icon/search.png" alt="2"></button>
 			</div>
-		</div>
+		</div> 
 	</header>
 	
 
 <!-- MAIN Heading of Page -->
 	<div class="title" id="title">
-		<span>Daily Quiz on LearnEd</span>
+		<span>Daily Quiz on Nayi Manzil</span>
 		<div class="shortdesc"><br>
 			<p>If you think education is expensive, try ignorance</p>
 		</div>
@@ -43,17 +45,17 @@
 	
 	<div class="left-side" id="left">
 		<ul>
-			<li onclick="quizt(1)">HOME</li>
-			<li onclick="quizt(2)">JEE Mains</li>
-			<li onclick="quizt(3)">JEE Advanced</li>
-			<li onclick="quizt(4)">GATE</li>
-			<li onclick="quizt(5)">C/C++</li>
-			<li onclick="quizt(6)">Java</li>
-			<li onclick="quizt(7)">Python</li>
-			<li onclick="quizt(8)">JavaScript</li>
-			<li onclick="quizt(9)">Data Structures</li>
-			<li onclick="quizt(10)">Algorithm</li>
-			<li onclick="quizt(11)">Interview Questions</li>
+			<li onclick="quizt(1)">Home</li>
+			<li onclick="quizt(2)">Html quiz</li>
+			<li onclick="quizt(5)">CSS quiz</li>
+			<li onclick="quizt(8)">javascript</li>
+			<li onclick="quizt(5)">tailwind css quiz</li>
+			<li onclick="quizt(5)">Boostap</li>
+			<li onclick="quizt(5)">Node.js</li>
+			<li onclick="quizt(5)">Express js</li>
+			<li onclick="quizt(5)">React</li>
+			<li onclick="quizt(5)">Next.js</li>
+			
 		</ul>
 	</div>
 
@@ -62,25 +64,25 @@
 			
 			<div id="f1"><div class="quiz-frame main-frame"></div></div>
 
-			<div id="f2"><iframe class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSe3hXLPuiQGqj1n3IeeAzM8YLNpgJIIk_zfteoEdWka4X3wxQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+			<div id="f2"><iframe title="d" class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSfegs9FLLwow-l049qZW5k5WI4ox3pFkUz42Ee5IxllSR6Fzg/viewform?usp=sf_link" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
 			
-			<div id="f3"><iframe class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSeVTLsd_AqZGpbIMnZRm20OKrjjiYSirWBjfCHpWtAsMQU--g/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+			<div id="f3"><iframe title="d" class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSeVTLsd_AqZGpbIMnZRm20OKrjjiYSirWBjfCHpWtAsMQU--g/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" >Loading…</iframe></div>
 			
-			<div id="f4"><iframe class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSdjSKZhQp5jqqR34zD_uWMtgXr18F9pdK6YqcafLSP6J7VZjw/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+			<div id="f4"><iframe title="d" class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSdjSKZhQp5jqqR34zD_uWMtgXr18F9pdK6YqcafLSP6J7VZjw/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" >Loading…</iframe></div>
 
-			<div id="f5"><iframe class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSe1xs1-41MAbLN7KkXrJwtGdbl5ydxe_vX_nmFRjf6c0wtYkA/viewform?embedded=true"  frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></iframe></div>
+			<div id="f5"><iframe title="d" class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSe1xs1-41MAbLN7KkXrJwtGdbl5ydxe_vX_nmFRjf6c0wtYkA/viewform?embedded=true"  frameborder="0" marginheight="0" marginwidth="0" >Loading…</iframe></iframe></div>
 			
-			<div id="f6"><iframe class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSdHFDm_BakVxro_zJI78OF2OLJpXgDzzaAVMHD9hptWlXBSpA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+			<div id="f6"><iframe title="d" class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSdHFDm_BakVxro_zJI78OF2OLJpXgDzzaAVMHD9hptWlXBSpA/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0" >Loading…</iframe></div>
 			
-			<div id="f7"><iframe class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSdgD7yFEJtqpkImDiLAaQ7w9VcsO688gr1V3Gl7FqwM5yXtWQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+			<div id="f7"><iframe title="d" class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSdgD7yFEJtqpkImDiLAaQ7w9VcsO688gr1V3Gl7FqwM5yXtWQ/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
 
-			<div id="f8"><iframe class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSchDBnai_Aup7YFJQegg4z-qoB338p010VgZRxBYDT17xoRew/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+			<div id="f8"><iframe title="d" class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSchDBnai_Aup7YFJQegg4z-qoB338p010VgZRxBYDT17xoRew/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
 
-			<div id="f9"><iframe class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSfY5oIAz4R9Ty-LBpx7h4th6OJ0-RkrxIlLslRV4NjwwW8_uw/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+			<div id="f9"><iframe title="d" class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSfY5oIAz4R9Ty-LBpx7h4th6OJ0-RkrxIlLslRV4NjwwW8_uw/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
 			
-			<div id="f10"><iframe class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSflwS89sG7H98J9vFgFqJgsKaZ5gpq3yUlOiW3up7RQQ-qRnw/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
+			<div id="f10"><iframe title="d" class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSflwS89sG7H98J9vFgFqJgsKaZ5gpq3yUlOiW3up7RQQ-qRnw/viewform?embedded=true" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></div>
 
-			<div id="f11"><iframe class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSe_aS8-CMNFdUzI1UE73zahC2bmMwJkmB6FJXPIeKbLIBqB4Q/viewform?embedded=true" frameborder="0" marginheiclass="quiz-frame" ght="0" marginwidth="0">Loading…</iframe></div>
+			<div id="f11"><iframe title="d" class="quiz-frame" src="https://docs.google.com/forms/d/e/1FAIpQLSe_aS8-CMNFdUzI1UE73zahC2bmMwJkmB6FJXPIeKbLIBqB4Q/viewform?embedded=true" frameborder="0" marginheiclass="quiz-frame" ght="0" marginwidth="0">Loading…</iframe></div>
 
 		</div>
 	</div>
@@ -90,3 +92,4 @@
 	<script type="text/javascript" src="../script.js"></script>
 </body>
 </html>
+
