--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li><a class="active" href="">Home</a></li>
                 <li><a href="#portfolio_section">Portfolio</a></li>
                 <li><a href="#team_section">Team</a></li>
-                <!-- <li><a href="#services_section">Services</a></li> -->
+                <li><a href="#services_section">Services</a></li>
                 <li><a href="#contactus_section">Contact</a></li>
             </ul>
             <div class="srch"><input type="text" class="search" placeholder="Search here..."><img src="images/icon/search.png" alt="search" onclick="slide()"></div>
