--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
 	<div class="diffSection" id="services_section">
 	<center><p style="font-size: 50px; padding: 100px; padding-bottom: 40px; color: #fff;">Services</p></center>
 	</div>
-	<a href="https://ums-murshad.vercel.app/"><div class="s-card"><img src="images/icon/discussion.png" alt="iamge"><p><b><i>UMS</i></b></p></div></a>
-	<a href="subjects/computer_courses.html"><div class="s-card"><img src="images/icon/computer-courses.png" alt="iamge"><p>Frontend</p></div></a>
-	<a href="subjects/jee.html"><div class="s-card"><img src="images/icon/brainbooster.png" alt="iamge"><p>Backend </p></div></a>
+	<a href="#"><div class="s-card"><img src="images/icon/discussion.png" alt="iamge"><p><b><i>UMS</i></b></p></div></a>
+	<a href="#"><div class="s-card"><img src="images/icon/computer-courses.png" alt="iamge"><p>Frontend</p></div></a>
+	<a href="#"><div class="s-card"><img src="images/icon/brainbooster.png" alt="iamge"><p>Backend </p></div></a>
 	<a href="#"><div class="s-card"><img src="images/icon/online-tutorials.png" alt="iamge"><p>Data basses</p></div></a>
-	<a href="."><div class="s-card"><img src="images/icon/papers.jpg" alt="iamge"><p>Next.js</p></div></a>
+	<a href="#"><div class="s-card"><img src="images/icon/papers.jpg" alt="iamge"><p>Next.js</p></div></a>
 
 	<a href="/subjects/quiz.html"><div class="s-card"><img src="images/icon/q1.png" alt="iamge"><p>Daily Brain Teasing Questions to Improve IQ</p></div></a>
 
